web-infras/parser/tests/fixtures/babel/es2017/async-functions/multiple-await-in-async-arrow-params/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (1,16)
1|async ({ x = [ await ], y = { await } }) => {}
 |              ^
[SyntaxError]: Can not use 'await' as identifier inside an async function. (1,31)
1|async ({ x = [ await ], y = { await } }) => {}
 |                             ^
